# synapse

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: backend-checks.yml  desktop-release.yml
backend/: Dockerfile  entrypoint.sh  migrate.py  pyproject.toml  requirements.txt
backend/app/: constants.py  main.py
backend/app/core/: config.py  deps.py  security.py  user_manager.py
backend/app/db/: migration_helpers.py
backend/app/models/: types.py
backend/app/prompts/: generate_commit_message.py  generate_pr_description.py  generate_title.py  system_prompt.py
backend/app/services/: agent.py  agent_service.py  attachment.py  chat.py  claude_agent.py  claude_folder_sync.py  claude_session_registry.py  command.py  email.py  exceptions.py  git.py  github.py  maintenance.py  marketplace.py  message.py  model_registry.py  openai_oauth.py  queue.py  refresh_token.py  resource.py  sandbox.py  scheduler.py  search.py  session_registry.py  skill.py  storage.py  terminal.py  user.py  workspace.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_chat.py  test_queue.py
desktop/: entry.py  requirements.txt  run_build.mjs
docs/: desktop-local.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
sandbox/docker/: Dockerfile
sandbox/e2b/: e2b.Dockerfile
(+420 files in other folders)
